--- a/java/dagger/internal/codegen/BUILD
+++ b/java/dagger/internal/codegen/BUILD
@@ -97,6 +97,7 @@ java_library(
         "Util.java",
         "ValidationType.java",
         "package-info.java",
+         "SymEncPara.java",
     ],
     plugins = CODEGEN_PLUGINS,
     tags = ["maven:merged"],
@@ -177,6 +178,7 @@ java_library(
         "ProducesMethodValidator.java",
         "ProvidesMethodValidator.java",
         "ValidationReport.java",
+        "SymEncValidator.java",
     ],
     plugins = CODEGEN_PLUGINS,
     tags = ["maven:merged"],
@@ -232,6 +234,7 @@ java_library(
         "SubcomponentNames.java",
         "SubcomponentWriter.java",
         "UnwrappedMapKeyGenerator.java",
+        "SymEncGenerator.java",
     ],
     plugins = CODEGEN_PLUGINS,
     tags = ["maven:merged"],
@@ -254,6 +257,7 @@ java_library(
         "MapKeyProcessingStep.java",
         "ModuleProcessingStep.java",
         "ProductionExecutorModuleProcessingStep.java",
+        "SymEncProssingStep.java",
     ],
     plugins = CODEGEN_PLUGINS,
     deps = CODEGEN_DEPS + [
